# HW2

./: CMakeLists.txt  Circle.cpp  Circle.h  Figure2D.cpp  Figure2D.h  Main.cpp  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Segment.cpp  Segment.h  Square.cpp  Square.h
Header Files/: Circle.h  Figure2D.h  Point.h  Rectangle.h  Segment.h  Square.h  utils.h
Resource Files/: Circle.cpp  Figure2D.cpp  Point.cpp  Rectangle.cpp  Segment.cpp  Square.cpp  utils.cpp
