cmake_minimum_required(VERSION 3.20)
project(HW2)

set(CMAKE_CXX_STANDARD 14)

add_executable(HW2 main.cpp "Resource Files/Figure2D.cpp" "Header Files/Figure2D.h" "Resource Files/Point.cpp" "Header Files/Point.h" "Resource Files/Segment.cpp" "Header Files/Segment.h" "Resource Files/Rectangle.cpp" "Header Files/Rectangle.h" "Resource Files/Square.cpp" "Header Files/Square.h" "Resource Files/Circle.cpp" "Header Files/Circle.h" "Resource Files/utils.cpp" "Header Files/utils.h")
